# ragProbe

./: .gitignore  LICENSE  README.md  pyproject.toml
ragprobe/: __init__.py  calibrate.py  cli.py  diff.py  graph.py  models.py  runner.py  storage.py
ragprobe/generators/: __init__.py  base.py  buried_fact.py  distractor.py  multihop.py  near_miss.py
tests/: conftest.py  test_diff.py  test_generators.py  test_graph.py  test_runner.py  test_storage.py
tests/fixtures/: chunks.jsonl  make_chunks_jsonl.py  synthetic.py
