[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragprobe"
version = "0.1.0"
description = "Adversarial eval suite generator for RAG pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "sentence-transformers>=3.0",
    "networkx>=3.0",
    "numpy>=1.26",
    "httpx>=0.27",
    "litellm>=1.40",
]

[project.scripts]
ragprobe = "ragprobe.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[tool.hatch.build.targets.wheel]
packages = ["ragprobe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests that require a real LLM/API key (deselect with '-m \"not integration\"')",
]
